Bugzilla Bug 344199 nsDOMScriptObjectFactory::GetScriptRuntimeByID should fill in the array for fast lookup. Patch by alfred.peng@sun.com mhammond: review+ bzbarsky: superreview+